--- a/hyphoto/cosplay.html
+++ b/hyphoto/cosplay.html
@@ -29,81 +29,81 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda1-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda1-min.jpg"
                          alt="">
                 </a>
                 <h2>KDA Widow by 爆炸糖</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda4-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda4-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda5-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda5-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda6-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda6-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko1-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko1-min.jpg"
                          alt="">
                 </a>
                 <h2>Nico Yazawa 花妖精 by 黎湮</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
