--- a/hyphoto/horizon.html
+++ b/hyphoto/horizon.html
@@ -29,67 +29,67 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" alt="">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/facing-horizon-min.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/facing-horizon-min.jpg" alt="">
                 </a>
                 <h2>facing the horizon</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" alt="">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/tender-min.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/tender-min.jpg" alt="">
                 </a>
                 <h2>tender</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/soft-min.jpg
                                 " class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/soft-min.jpg
                                         " alt="">
                 </a>
                 <h2>soft</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/LightHouse-min.jpg
                                 " class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/LightHouse-min.jpg
                                         " alt="">
                 </a>
                 <h2>LightHouse</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/across-min.jpg
                                 " class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/across-min.jpg
                                         " alt="">
                 </a>
                 <h2>across</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Industrial-Horizon-min.jpg
                                 " class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Industrial-Horizon-min.jpg
                                         " alt="">
                 </a>
                 <h2>Industrial Horizon</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Xinghai-Bay-min.jpg
                                 " class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Xinghai-Bay-min.jpg
                                         " alt="">
                 </a>
                 <h2>Xinghai Bay</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" alt="">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Hakone-Sunrise-min.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/horizon/Hakone-Sunrise-min.jpg" alt="">
                 </a>
                 <h2>Hakone Sunrise</h2>
                 <p>
