--- a/hyphoto/jk.html
+++ b/hyphoto/jk.html
@@ -29,189 +29,189 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool2.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool2.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool2.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool2.jpg"
                          alt="">
                 </a>
                 <h2>花不芄 - 旷课天台等你 @UIUC Krannert Performance Center</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool1.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool1.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool1.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool1.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool3.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool3.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool3.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool3.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool4.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool4.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool4.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool4.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool5.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool5.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool5.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool5.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool6.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool6.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/afterschool6.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/afterschool6.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly1.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly1.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly1.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly1.jpg"
                          alt="">
                 </a>
                 <h2>小凯莉 @UIUC Japan House</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly2.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly2.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly2.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly2.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly3.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly3.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/kelly3.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/kelly3.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two3.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two3.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two3.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two3.jpg"
                          alt="">
                 </a>
                 <h2>卉子&花不芄 @UIUC Japan House</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two2.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two2.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two2.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two2.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/two.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/two.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan3-min.jpg"
                          alt="">
                 </a>
                 <h2>七七 @Shenzhen Bay</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan4-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan4-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan4-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan5-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan5-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan5-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan6-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkshenzhenwan6-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkshenzhenwan6-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily-min.jpg"
                          alt="">
                 </a>
                 <h2>谶泽 @CUPL</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/jk/jkdaily3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/jk/jkdaily3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
