--- a/hyphoto/lolita.html
+++ b/hyphoto/lolita.html
@@ -29,216 +29,216 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua3.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua3.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua3.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua3.jpg"
                          alt="">
                 </a>
                 <h2>卉子的花嫁 @Illinois</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua2.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua2.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua2.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua2.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua5.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua5.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua5.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua5.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua4.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua4.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua4.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua4.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua6.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua6.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/hua6.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/hua6.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp193.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp193.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp193.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp193.jpg"
                          alt="">
                 </a>
                 <h2>花不芄 - 香槟不会来的春天 @Lake of the Woods Bridge, IL</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp194.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp194.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp194.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp194.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp195.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp195.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp195.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp195.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp196.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp196.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp196.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp196.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp191.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp191.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp191.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp191.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp192.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp192.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/sp192.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/sp192.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney2-min.jpg"
                          alt="">
                 </a>
                 <h2>Sunny @Disney Orlando</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/disney3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/disney3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo2-min.jpg"
                          alt="">
                 </a>
                 <h2>Nemia @burnham 310</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/lo3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/lo3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan-min.jpg"
                          alt="">
                 </a>
                 <h2>奈雨 @Beihai Park</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/liyuan3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/liyuan3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi-min.jpg"
                          alt="">
                 </a>
                 <h2>小染 @怪兽家民宿</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi2-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi2-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi2-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi2-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi3-min.jpg"
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi3-min.jpg"
                    class="image">
-                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lolita/maxi3-min.jpg"
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lolita/maxi3-min.jpg"
                          alt="">
                 </a>
                 <h2></h2>
