--- a/hyphoto/template.html
+++ b/hyphoto/template.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<title>Phoebe @Caffebene - HYPhoto</title>
+<title>xxxx @xxxx - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!-- Scripts -->
